[project]
name = "ryanvk"
version = "0.1.0"
description = ""
authors = [
    {name = "GreyElaina", email = "GreyElaina@outlook.com"},
]
dependencies = [
    "typing-extensions>=4.8.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.3",
    "ipykernel>=6.27.1",
    "devtools>=0.12.2",
    "pylyzer>=0.0.51",
]
